some fix for h100

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /yolo_building_localization/
 /BuildingDamageAssessment.code-workspace
 /geotiffs
+best_convnext_base_localization.pth
+best_twin_resnet.pth
